--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -9,22 +9,25 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.navbar-sideLeft{
-  width: 20vw;
+/* .navbar-sideLeft{
+  width: auto;
 }
 .navbar-sideCenter{
-  width: 60vw;
+  width: 60%;
 }
 .navbar-sideRight{
-  width: 20vw;
-}
+  width: auto;
+} */
 .navSelect{
   background:rgba(63, 64, 60, 0.7);
   border: none;
   font-size: 1rem;
   height: 4vh;
-  width: 19vw;
+  width: 15vw;
   border-radius:15px;
+  color: white;
+  font-weight:bold;
+  padding-left: 0 8px;
 }
 .btnNavBar{
   background-color:black;
@@ -39,23 +42,37 @@
 .btnSearch{
   background-color:black;
   height: 4vh;
-  width: 14vh;
+  width: 15vh;
   font: size 3rem;
   font-weight:bold;
   color: white;
   border-radius:10px;
   outline: white;
+  margin: 0 0 0 4vw;
 }
 .searchNavBar{
   outline:none;
   height: 3vh;
   width: 15vw;
   border-radius: 15px;
-  margin: 0 1vw 0 0;
+  margin: 0 0 0 2vw;
+  background:rgba(63, 64, 60, 0.8);
+  color: white;
+  font-weight:bold;
+  border: none;
+}
+.glass{
+  position: absolute;
+  right: 215px;
+  top: 10px; 
 }
 .text{
   font-weight: bolder;
   font-size: 2.3vh;
   color: white;
   margin: 0 0.5vw 0 0.5vw;
+}
+.btn-large{
+  width: 100%;
+  font-size: 1.2vw;
 }
