--- a/client/src/components/newRecipe/newRecipe.css
+++ b/client/src/components/newRecipe/newRecipe.css
@@ -1,8 +1,53 @@
-.main{
+.mainPage{
   display: flex;
   flex-direction: column;
   justify-content:center;
   align-items:center;
-  width: 50%;
+  width: 100%;
   height: auto;
+  margin: 3vh;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  padding: 1vh;
+  background:rgba(63, 64, 60, 0.7);
+  border-radius:15px;
+}
+.labelInput{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  border: 1px solid rgba(255,255,255);
+  padding:0.5vh 1vw;
+  border-radius:5px;
+}
+input{
+  height: 3vh;
+  width: 22vw;
+  margin: 1vh 0;
+}
+input, textarea{
+  padding:0 10px;
+  background-color: transparent;
+  border-radius: 10px;
+  font-weight: bold;
+  color: #fff;
+  font-size:1.2rem;
+  border: 1px solid white;
+}
+.txtArea{
+  margin: 0;
+  border-radius: 0;
+  background-color: transparent;
+  color: white;
+  z-index: 2;
+  resize: none;
+  border-radius:15px;
+}
+.file{
+  background-color: transparent;
+  color: white;
+  font-weight: bold;
+  text-align: center;
 }
