--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -62,8 +62,8 @@
 }
 .glass{
   position: absolute;
-  right: 265px;
-  top: 11px; 
+  right: 11vw;
+  top: 1.2vh; 
 }
 .text{
   font-weight: bolder;
