--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -16,8 +16,9 @@
   width: 20vw;
   height: 23vh;
   margin: 1vh 1vw;
-  border-radius:15px
+  border-radius:15px;
+  opacity: 0.4;
 }
 .recipeCard:hover{
-  opacity: 0.4;
+  opacity: 1;
 }
