filters end, no ok only end

--- a/client/src/components/landing/landing.css
+++ b/client/src/components/landing/landing.css
@@ -1,11 +1,12 @@
 .landing{
   display:flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .love{
   color: white;
   font-size: 6rem;
-  margin-right: 40vw;
 }
 .btn{
   background-color:black;
