--- a/client/src/components/newRecipe/newRecipe.css
+++ b/client/src/components/newRecipe/newRecipe.css
@@ -44,6 +44,7 @@ input, textarea{
   z-index: 2;
   resize: none;
   border-radius:15px;
+  width: 30vw;
 }
 .file{
   background-color: transparent;
